fix rotation bug in interactive figure

--- a/notebooks/02_ptycho_contrast_transfer.ipynb
+++ b/notebooks/02_ptycho_contrast_transfer.ipynb
@@ -420,7 +420,10 @@
     "\n",
     "# iCoM operators\n",
     "kx_op = -1.0j * kxa / k2\n",
-    "ky_op = -1.0j * kya / k2"
+    "ky_op = -1.0j * kya / k2\n",
+    "\n",
+    "# Compute the inverse error\n",
+    "inverse_error = (k*np.pi/np.sqrt(2))"
    ]
   },
   {
@@ -594,50 +597,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "def65a73-2020-4d68-92a2-0ca8e07929a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_remaining_figure(\n",
-    "    inner_collection_angle,\n",
-    "    outer_collection_angle,\n",
-    "    virtual_masks_annular,\n",
-    "    icom,\n",
-    "):\n",
-    "    \"\"\" \"\"\"\n",
-    "    ctf_dpc = ctf.compute_ctf(icom)\n",
-    "    _, I_bins_dpc = ctf.radially_average_ctf(\n",
-    "        ctf_dpc,\n",
-    "        (sampling,sampling)\n",
-    "    )\n",
-    "\n",
-    "    # 2D data\n",
-    "    im_detector.set_data(ctf.combined_images_rgb(virtual_masks_annular))\n",
-    "    im_ctf_dpc.set_data(\n",
-    "        ctf.histogram_scaling(\n",
-    "            np.fft.fftshift(ctf_dpc),\n",
-    "            normalize=True\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    # 1D lines\n",
-    "    plot_ctf_dpc.set_ydata(I_bins_dpc)\n",
-    "\n",
-    "    # collections (vlines)\n",
-    "    ax_ctf_rad.collections[0].remove()\n",
-    "    ax_ctf_rad.vlines([inner_collection_angle,outer_collection_angle],0,2,colors='k',linestyles='--',linewidth=1,)\n",
-    "\n",
-    "    im_ctf_dpc.set_alpha(1)\n",
-    "    plot_ctf_dpc.set_alpha(1)\n",
-    "\n",
-    "    # re-draw figure\n",
-    "    fig.canvas.draw()\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "id": "80821142-9b72-4a66-a841-da4d439ea99e",
    "metadata": {},
    "outputs": [],
@@ -672,74 +631,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "454d836e-17e8-4015-b81f-649dcace4f42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_icom(\n",
-    "    inner_collection_angle,\n",
-    "    outer_collection_angle,\n",
-    "    number_of_segments,\n",
-    "    rotation_offset,\n",
-    "):\n",
-    "    \"\"\" \"\"\"\n",
-    "\n",
-    "    # compute new datasets\n",
-    "    virtual_masks_annular[0] = annular_segmented_detectors(\n",
-    "        gpts=(n,n),\n",
-    "        sampling=(sampling,sampling),\n",
-    "        n_angular_bins=number_of_segments,\n",
-    "        inner_radius=inner_collection_angle,\n",
-    "        outer_radius=outer_collection_angle,\n",
-    "        rotation_offset=np.deg2rad(rotation_offset),\n",
-    "    )   \n",
-    "    \n",
-    "    com_x, com_y = compute_com_using_virtual_detectors(\n",
-    "        intensities[0],\n",
-    "        virtual_masks_annular[0],\n",
-    "        intensities[1],\n",
-    "        sx,sy,\n",
-    "        kxa,kya,\n",
-    "    )\n",
-    "\n",
-    "    icom_annular = integrate_com(com_x,com_y,kx_op,ky_op)\n",
-    "\n",
-    "    update_remaining_figure(\n",
-    "        inner_collection_angle,\n",
-    "        outer_collection_angle,\n",
-    "        virtual_masks_annular[0],\n",
-    "        icom_annular,\n",
-    "    )\n",
-    "\n",
-    "    reset_wrapper()\n",
-    "    amplitude_values[0] = None\n",
-    "    \n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "95b1a1e1-6381-4554-b108-84fb91ab5566",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec912b8aa30c4070bcffd01ca100914e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "style = {'description_width': 'initial'}\n",
     "layout = ipywidgets.Layout(width=\"320px\",height=\"30px\")\n",
@@ -845,12 +740,12 @@
     "\n",
     "def defocus_wrapper(*args):\n",
     "    reset_wrapper()\n",
+    "    simulate_button.button_style = 'warning'\n",
     "    im_ctf_dpc.set_alpha(0.25)\n",
     "    im_ctf_ptycho.set_alpha(0.25)\n",
     "    plot_ctf_dpc.set_alpha(0.25)\n",
     "    plot_ctf_ptycho.set_alpha(0.25)\n",
     "    plot_ctf_dpc_analytical.set_alpha(0.25)\n",
-    "    simulate_button.button_style = 'warning'\n",
     "    simulation_pbar.reset()\n",
     "defocus_slider.observe(defocus_wrapper,names='value')\n",
     "\n",
@@ -880,12 +775,7 @@
     "    plot_ctf_dpc_analytical.set_ydata(I_bins_analytic)\n",
     "    plot_ctf_dpc_analytical.set_alpha(1)\n",
     "\n",
-    "    compute_icom(\n",
-    "        inner_collection_angle_slider.value,\n",
-    "        outer_collection_angle_slider.value,\n",
-    "        number_of_segments_slider.value,\n",
-    "        rotation_offset_slider.value,\n",
-    "    )\n",
+    "    update_figure(\"dummy\")\n",
     "\n",
     "    amplitude_values[0] = bin_amplitudes_using_virtual_detectors(\n",
     "        amplitudes_probe[0],\n",
@@ -938,34 +828,117 @@
     "outer_reconstruct_pbar_wrapper = ipywidgets.HBox(outer_reconstruct_pbar.container.children[:2],layout=ipywidgets.Layout(width=\"160px\"))\n",
     "\n",
     "inner_reconstruct_pbar = tqdm(total=9,display=False)\n",
-    "inner_reconstruct_pbar_wrapper = ipywidgets.HBox(inner_reconstruct_pbar.container.children[:2],layout=ipywidgets.Layout(width=\"160px\"))\n",
+    "inner_reconstruct_pbar_wrapper = ipywidgets.HBox(inner_reconstruct_pbar.container.children[:2],layout=ipywidgets.Layout(width=\"160px\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bc786741-ac7d-488a-b4e5-14e3c9c81fa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_figure(\n",
+    "    *args,\n",
+    "):\n",
+    "    \"\"\" \"\"\"\n",
     "\n",
-    "ipywidgets.interactive_output(\n",
-    "    compute_icom,\n",
-    "    {\n",
-    "        'inner_collection_angle':inner_collection_angle_slider,\n",
-    "        'outer_collection_angle':outer_collection_angle_slider,\n",
-    "        'number_of_segments':number_of_segments_slider,\n",
-    "        'rotation_offset':rotation_offset_slider,\n",
-    "    }\n",
-    ")"
+    "    # compute new datasets\n",
+    "    virtual_masks_annular = annular_segmented_detectors(\n",
+    "        gpts=(n,n),\n",
+    "        sampling=(sampling,sampling),\n",
+    "        n_angular_bins=number_of_segments_slider.value,\n",
+    "        inner_radius=inner_collection_angle_slider.value,\n",
+    "        outer_radius=outer_collection_angle_slider.value,\n",
+    "        rotation_offset=np.deg2rad(rotation_offset_slider.value),\n",
+    "    )   \n",
+    "    \n",
+    "    com_x, com_y = compute_com_using_virtual_detectors(\n",
+    "        intensities[0],\n",
+    "        virtual_masks_annular,\n",
+    "        intensities[1],\n",
+    "        sx,sy,\n",
+    "        kxa,kya,\n",
+    "    )\n",
+    "\n",
+    "    icom_annular = integrate_com(com_x,com_y,kx_op,ky_op)\n",
+    "    ctf_annular = ctf.compute_ctf(icom_annular) \n",
+    "\n",
+    "    q_bins_annular, I_bins_annular = ctf.radially_average_ctf(\n",
+    "        ctf_annular,\n",
+    "        (sampling,sampling)\n",
+    "    )\n",
+    "\n",
+    "    q_bins_annular_snr, I_bins_annular_snr = ctf.radially_average_ctf(\n",
+    "        ctf_annular*inverse_error,\n",
+    "        (sampling,sampling)\n",
+    "    )\n",
+    "    \n",
+    "    # update data\n",
+    "\n",
+    "    # 2D arrays\n",
+    "    im_detector.set_data(ctf.combined_images_rgb(virtual_masks_annular))\n",
+    "    im_ctf_dpc.set_data(ctf.histogram_scaling(np.fft.fftshift(ctf_annular),normalize=True))\n",
+    "\n",
+    "    # 1D lines\n",
+    "    plot_ctf_dpc.set_ydata(I_bins_annular)\n",
+    "\n",
+    "    # vlines\n",
+    "    ax_ctf_rad.collections[0].remove()\n",
+    "    ax_ctf_rad.vlines([inner_collection_angle_slider.value,outer_collection_angle_slider.value],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "\n",
+    "    im_ctf_dpc.set_alpha(1)\n",
+    "    plot_ctf_dpc.set_alpha(1)\n",
+    "\n",
+    "    im_ctf_ptycho.set_alpha(0.25)\n",
+    "    iterate_button.button_style = 'warning'\n",
+    "\n",
+    "    # re-draw figure\n",
+    "    fig.canvas.draw_idle()\n",
+    "    return None\n",
+    "\n",
+    "inner_collection_angle_slider.observe(update_figure,names='value')\n",
+    "outer_collection_angle_slider.observe(update_figure,names='value')\n",
+    "number_of_segments_slider.observe(update_figure,names='value')\n",
+    "rotation_offset_slider.observe(update_figure,names='value')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "0ef3d7a4-fb8b-4e85-ba91-a86b29943f63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate(\n",
+    "    defocus,\n",
+    "):\n",
+    "    \"\"\" \"\"\"\n",
+    "    intensities[0], probe_array_fourier[0] = simulate_intensities(\n",
+    "        defocus=defocus,\n",
+    "    )\n",
+    "    intensities[1] = intensities[0].sum((-1,-2))\n",
+    "    \n",
+    "    update_figure(\"dummy\")\n",
+    "    \n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "180fa999d8b3402e9983db7f3b31e205",
+       "model_id": "a1a38379083140e08aec31fbbc335409",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=-27, continuous_update=False, description='defocu…"
+       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=0, continuous_update=False, description='defocus …"
       ]
      },
      "metadata": {},
@@ -1020,7 +993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
