fix ptycho updating bug, change DPC titles to iCOM

--- a/notebooks/02_ptycho_contrast_transfer.ipynb
+++ b/notebooks/02_ptycho_contrast_transfer.ipynb
@@ -522,9 +522,9 @@
     "\n",
     "# analytic CTF radially-averaged\n",
     "ax_ctf_rad = axs[3]\n",
-    "plot_ctf_dpc_analytical = ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k',label='analytical DPC')[0]\n",
+    "plot_ctf_dpc_analytical = ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k',label='analytical iCOM')[0]\n",
     "\n",
-    "plot_ctf_dpc = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=icom_line_color,label='annular DPC')[0]\n",
+    "plot_ctf_dpc = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=icom_line_color,label='annular iCOM')[0]\n",
     "plot_ctf_ptycho = ax_ctf_rad.plot(q_bins_annular, np.zeros_like(I_bins_analytic), color=iter_ptycho_line_color,label='annular ptycho')[0]\n",
     "ax_ctf_rad.legend()\n",
     "\n",
@@ -533,7 +533,7 @@
     "    axs,\n",
     "    [\n",
     "        \"detector geometry\",\n",
-    "        \"annular DPC CTF\",\n",
+    "        \"annular iCOM CTF\",\n",
     "        \"annular ptycho CTF\",\n",
     "        \"radially averaged CTFs\",\n",
     "    ]\n",
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "bc786741-ac7d-488a-b4e5-14e3c9c81fa7",
    "metadata": {},
    "outputs": [],
@@ -844,7 +844,7 @@
     "    \"\"\" \"\"\"\n",
     "\n",
     "    # compute new datasets\n",
-    "    virtual_masks_annular = annular_segmented_detectors(\n",
+    "    virtual_masks_annular[0] = annular_segmented_detectors(\n",
     "        gpts=(n,n),\n",
     "        sampling=(sampling,sampling),\n",
     "        n_angular_bins=number_of_segments_slider.value,\n",
@@ -855,7 +855,7 @@
     "    \n",
     "    com_x, com_y = compute_com_using_virtual_detectors(\n",
     "        intensities[0],\n",
-    "        virtual_masks_annular,\n",
+    "        virtual_masks_annular[0],\n",
     "        intensities[1],\n",
     "        sx,sy,\n",
     "        kxa,kya,\n",
@@ -877,7 +877,7 @@
     "    # update data\n",
     "\n",
     "    # 2D arrays\n",
-    "    im_detector.set_data(ctf.combined_images_rgb(virtual_masks_annular))\n",
+    "    im_detector.set_data(ctf.combined_images_rgb(virtual_masks_annular[0]))\n",
     "    im_ctf_dpc.set_data(ctf.histogram_scaling(np.fft.fftshift(ctf_annular),normalize=True))\n",
     "\n",
     "    # 1D lines\n",
@@ -890,8 +890,12 @@
     "    im_ctf_dpc.set_alpha(1)\n",
     "    plot_ctf_dpc.set_alpha(1)\n",
     "\n",
-    "    im_ctf_ptycho.set_alpha(0.25)\n",
     "    iterate_button.button_style = 'warning'\n",
+    "    if amplitude_values[0] is not None:\n",
+    "        im_ctf_ptycho.set_alpha(0.25)\n",
+    "        # amplitude_values[0] = None\n",
+    "        reset_wrapper()\n",
+    "        im_ctf_ptycho.set_alpha(0.25)\n",
     "\n",
     "    # re-draw figure\n",
     "    fig.canvas.draw_idle()\n",
@@ -905,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "0ef3d7a4-fb8b-4e85-ba91-a86b29943f63",
    "metadata": {},
    "outputs": [],
@@ -926,14 +930,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1a38379083140e08aec31fbbc335409",
+       "model_id": "894e6519254c4982a4d12bbbe341c460",
        "version_major": 2,
        "version_minor": 0
       },
