fix resetting bug for ptycho

--- a/notebooks/02_ptycho_contrast_transfer.ipynb
+++ b/notebooks/02_ptycho_contrast_transfer.ipynb
@@ -892,10 +892,9 @@
     "\n",
     "    iterate_button.button_style = 'warning'\n",
     "    if amplitude_values[0] is not None:\n",
-    "        im_ctf_ptycho.set_alpha(0.25)\n",
-    "        # amplitude_values[0] = None\n",
+    "        amplitude_values[0] = None\n",
     "        reset_wrapper()\n",
-    "        im_ctf_ptycho.set_alpha(0.25)\n",
+    "    im_ctf_ptycho.set_alpha(0.25)\n",
     "\n",
     "    # re-draw figure\n",
     "    fig.canvas.draw_idle()\n",
@@ -937,7 +936,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "894e6519254c4982a4d12bbbe341c460",
+       "model_id": "5f195dde4ed540d6be7795ecf270d114",
        "version_major": 2,
        "version_minor": 0
       },
@@ -975,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e69fe03-1f53-4f21-9e25-f1b1a8d8a374",
+   "id": "1b375b09-edc0-4846-b7f8-b9af56f09cf7",
    "metadata": {},
    "outputs": [],
    "source": []
