--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,168 @@
+
+@article{rose_nonstandard_1977,
+	title = {Nonstandard Imaging Methods in Electron Microscopy},
+	volume = {2},
+	pages = {251--267},
+	journaltitle = {Ultramicroscopy},
+	shortjournal = {Ultramicroscopy},
+	author = {Rose, H.},
+	date = {1977},
+}
+
+@article{dekkers_differential_1974,
+	title = {Differential phase contrast in a {STEM}},
+	volume = {41},
+	pages = {452--456},
+	number = {4},
+	journaltitle = {Optik},
+	author = {Dekkers, N. H. and De Lang, H.},
+	date = {1974},
+}
+
+@article{yang_enhanced_2016,
+	title = {Enhanced phase contrast transfer using ptychography combined with a pre-specimen phase plate in a scanning transmission electron microscope},
+	volume = {171},
+	issn = {03043991},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304399116301966},
+	doi = {10.1016/j.ultramic.2016.09.002},
+	pages = {117--125},
+	journaltitle = {Ultramicroscopy},
+	shortjournal = {Ultramicroscopy},
+	author = {Yang, Hao and Ercius, Peter and Nellist, Peter D. and Ophus, Colin},
+	date = {2016-12},
+}
+
+@article{pennycook_efficient_2015,
+	title = {Efficient phase contrast imaging in {STEM} using a pixelated detector. Part 1: Experimental demonstration at atomic resolution},
+	volume = {151},
+	issn = {03043991},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304399114001934},
+	doi = {10.1016/j.ultramic.2014.09.013},
+	shorttitle = {Efficient phase contrast imaging in {STEM} using a pixelated detector. Part 1},
+	pages = {160--167},
+	journaltitle = {Ultramicroscopy},
+	shortjournal = {Ultramicroscopy},
+	author = {Pennycook, Timothy J. and Lupini, Andrew R. and Yang, Hao and Murfitt, Matthew F. and Jones, Lewys and Nellist, Peter D.},
+	date = {2015-04},
+}
+
+
+@article{yang_efficient_2015,
+	title = {Efficient phase contrast imaging in {STEM} using a pixelated detector. Part {II}: Optimisation of imaging conditions},
+	volume = {151},
+	issn = {03043991},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304399114002058},
+	doi = {10.1016/j.ultramic.2014.10.013},
+	shorttitle = {Efficient phase contrast imaging in {STEM} using a pixelated detector. Part {II}},
+	pages = {232--239},
+	journaltitle = {Ultramicroscopy},
+	shortjournal = {Ultramicroscopy},
+	author = {Yang, Hao and Pennycook, Timothy J. and Nellist, Peter D.},
+	date = {2015-04},
+}
+
+
+@article{oleary_contrast_2021,
+	title = {Contrast transfer and noise considerations in focused-probe electron ptychography},
+	volume = {221},
+	issn = {0304-3991},
+	url = {https://www.sciencedirect.com/science/article/pii/S0304399120303314},
+	doi = {10.1016/j.ultramic.2020.113189},
+	pages = {113189},
+	journaltitle = {Ultramicroscopy},
+	shortjournal = {Ultramicroscopy},
+	author = {O’Leary, Colum M. and Martinez, Gerardo T. and Liberti, Emanuela and Humphry, Martin J. and Kirkland, Angus I. and Nellist, Peter D.},
+	date = {2021-02-01},
+}
+
+
+@article{lazic_phase_2016,
+	title = {Phase contrast {STEM} for thin samples: Integrated differential phase contrast},
+	volume = {160},
+	issn = {03043991},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304399115300449},
+	doi = {10.1016/j.ultramic.2015.10.011},
+	shorttitle = {Phase contrast {STEM} for thin samples},
+	pages = {265--280},
+	journaltitle = {Ultramicroscopy},
+	shortjournal = {Ultramicroscopy},
+	author = {Lazić, Ivan and Bosch, Eric G.T. and Lazar, Sorin},
+	date = {2016-01},
+}
+
+@article{lazic_single-particle_2022,
+	title = {Single-particle cryo-{EM} structures from {iDPC}–{STEM} at near-atomic resolution},
+	volume = {19},
+	rights = {2022 The Author(s)},
+	issn = {1548-7105},
+	url = {https://www.nature.com/articles/s41592-022-01586-0},
+	doi = {10.1038/s41592-022-01586-0},
+	pages = {1126--1136},
+	number = {9},
+	journaltitle = {Nature Methods},
+	shortjournal = {Nat Methods},
+	author = {Lazić, Ivan and Wirix, Maarten and Leidl, Max Leo and de Haas, Felix and Mann, Daniel and Beckers, Maximilian and Pechnikova, Evgeniya V. and Müller-Caspary, Knut and Egoavil, Ricardo and Bosch, Eric G. T. and Sachse, Carsten},
+	date = {2022-09},
+}
+
+@article{bosch_analysis_2015,
+	title = {Analysis of {HR}-{STEM} theory for thin specimen},
+	volume = {156},
+	issn = {03043991},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304399115000194},
+	doi = {10.1016/j.ultramic.2015.02.004},
+	pages = {59--72},
+	journaltitle = {Ultramicroscopy},
+	shortjournal = {Ultramicroscopy},
+	author = {Bosch, Eric G.T. and Lazić, Ivan},
+	date = {2015-09},
+}
+
+
+@article{shibata_differential_2012,
+	title = {Differential phase-contrast microscopy at atomic resolution},
+	volume = {8},
+	issn = {1745-2473, 1745-2481},
+	url = {http://www.nature.com/articles/nphys2337},
+	doi = {10.1038/nphys2337},
+	pages = {611--615},
+	number = {8},
+	journaltitle = {Nature Physics},
+	shortjournal = {Nature Phys},
+	author = {Shibata, N. and Findlay, S. D. and Kohno, Y. and Sawada, H. and Kondo, Y. and Ikuhara, Y.},
+	date = {2012-08},
+}
+
+@article{shibata_electric_2017,
+	title = {Electric field imaging of single atoms},
+	volume = {8},
+	issn = {2041-1723},
+	url = {http://www.nature.com/articles/ncomms15631},
+	doi = {10.1038/ncomms15631},
+	pages = {15631},
+	number = {1},
+	journaltitle = {Nature Communications},
+	shortjournal = {Nat Commun},
+	author = {Shibata, Naoya and Seki, Takehito and Sánchez-Santolino, Gabriel and Findlay, Scott D. and Kohno, Yuji and Matsumoto, Takao and Ishikawa, Ryo and Ikuhara, Yuichi},
+	date = {2017-08},
+}
+
+
+@article{shibata_new_2010,
+	title = {New area detector for atomic-resolution scanning transmission electron microscopy},
+	volume = {59},
+	issn = {0022-0744},
+	url = {https://doi.org/10.1093/jmicro/dfq014},
+	doi = {10.1093/jmicro/dfq014},
+	pages = {473--479},
+	number = {6},
+	journaltitle = {Journal of Electron Microscopy},
+	shortjournal = {Journal of Electron Microscopy},
+	author = {Shibata, Naoya and Kohno, Yuji and Findlay, Scott D. and Sawada, Hidetaka and Kondo, Yukihito and Ikuhara, Yuichi},
+	date = {2010-12-01},
+}
+
+
 @article{bekkevold2024ultra,
   title={Ultra-fast Digital DPC Yielding High Spatio-temporal Resolution for Low-Dose Phase Characterization},
   author={Bekkevold, Julie Marie and Peters, Jonathan JP and Ishikawa, Ryo and Shibata, Naoya and Jones, Lewys},
@@ -6,3 +171,21 @@
   year={2024},
   publisher={Oxford University Press US}
 }
+
+@article{bekkevold_ultra-fast_2024,
+	title = {Ultra-fast Digital {DPC} Yielding High Spatio-temporal Resolution for Low-Dose Phase Characterization},
+	volume = {30},
+	url = {https://doi.org/10.1093/mam/ozae082},
+	doi = {10.1093/mam/ozae082},
+	pages = {878--888},
+	number = {5},
+	journaltitle = {Microscopy and Microanalysis},
+	author = {Bekkevold, Julie Marie and Peters, Jonathan J P and Ishikawa, Ryo and Shibata, Naoya and Jones, Lewys},
+	date = {2024-09-13},
+}
+
+
+
+
+
+
