add dpc references for defocus conditions

--- a/refs.bib
+++ b/refs.bib
@@ -163,6 +163,64 @@
 }
 
 
+@article{li_integrated_2022,
+	title = {Integrated Differential Phase Contrast ({IDPC})-{STEM} Utilizing a Multi-Sector Detector for Imaging Thick Samples},
+	volume = {28},
+	issn = {1431-9276, 1435-8115},
+	url = {https://www.cambridge.org/core/product/identifier/S1431927622000289/type/journal_article},
+	doi = {10.1017/S1431927622000289},
+	pages = {611--621},
+	number = {3},
+	journaltitle = {Microscopy and Microanalysis},
+	shortjournal = {Microsc Microanal},
+	author = {Li, Zhongbo and Biskupek, Johannes and Kaiser, Ute and Rose, Harald},
+	date = {2022-06},
+}
+
+@article{seifer_flexible_2021,
+	title = {Flexible {STEM} with Simultaneous Phase and Depth Contrast},
+	volume = {27},
+	issn = {1431-9276, 1435-8115},
+	url = {https://www.cambridge.org/core/journals/microscopy-and-microanalysis/article/flexible-stem-with-simultaneous-phase-and-depth-contrast/131F0EAA69FD8D9665E7E685EC81B1BE},
+	doi = {10.1017/S1431927621012861},
+	pages = {1476--1487},
+	number = {6},
+	journaltitle = {Microscopy and Microanalysis},
+	author = {Seifer, Shahar and Houben, Lothar and Elbaum, Michael},
+	date = {2021-12},
+}
+
+
+@article{burger_influence_2020,
+	title = {Influence of lens aberrations, specimen thickness and tilt on differential phase contrast {STEM} images},
+	volume = {219},
+	issn = {0304-3991},
+	url = {https://www.sciencedirect.com/science/article/pii/S0304399120302692},
+	doi = {10.1016/j.ultramic.2020.113118},
+	pages = {113118},
+	journaltitle = {Ultramicroscopy},
+	shortjournal = {Ultramicroscopy},
+	author = {Bürger, Julius and Riedl, Thomas and Lindner, Jörg K. N.},
+	date = {2020-12-01},
+}
+
+
+@article{liang_optimizing_2023,
+	title = {Optimizing experimental parameters of integrated differential phase contrast ({iDPC}) for atomic resolution imaging},
+	volume = {246},
+	issn = {03043991},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304399123000037},
+	doi = {10.1016/j.ultramic.2023.113686},
+	pages = {113686},
+	journaltitle = {Ultramicroscopy},
+	shortjournal = {Ultramicroscopy},
+	author = {Liang, Zhiyao and Song, Dongsheng and Ge, Binghui},
+	date = {2023-04},
+}
+
+
+
+
 @article{bekkevold2024ultra,
   title={Ultra-fast Digital DPC Yielding High Spatio-temporal Resolution for Low-Dose Phase Characterization},
   author={Bekkevold, Julie Marie and Peters, Jonathan JP and Ishikawa, Ryo and Shibata, Naoya and Jones, Lewys},
