split icom ctf and snrwidgets

--- a/notebooks/08_icom_snr.ipynb
+++ b/notebooks/08_icom_snr.ipynb
@@ -293,6 +293,9 @@
     "kx_op = -1.0j * kxa / k2\n",
     "ky_op = -1.0j * kya / k2\n",
     "\n",
+    "# Compute the inverse error\n",
+    "inverse_error = (k*np.pi/np.sqrt(2))\n",
+    "\n",
     "# Analytical CTF (probe autocorrelation)\n",
     "ctf_analytic = np.real(\n",
     "    np.fft.ifft2(\n",
@@ -304,8 +307,8 @@
     "    )\n",
     ")\n",
     "\n",
-    "# Radially-averaged CTF\n",
-    "q_bins_analytic, I_bins_analytic = ctf.radially_average_ctf(ctf_analytic,(sampling,sampling))"
+    "# Radially-averaged CTF and SNR\n",
+    "q_bins_analytic_snr, I_bins_analytic_snr = ctf.radially_average_ctf(ctf_analytic*inverse_error,(sampling,sampling))"
    ]
   },
   {
@@ -336,8 +339,8 @@
     "icom_annular = integrate_com(com_x,com_y,kx_op,ky_op)\n",
     "ctf_annular = ctf.compute_ctf(icom_annular) \n",
     "\n",
-    "q_bins_annular, I_bins_annular = ctf.radially_average_ctf(\n",
-    "    ctf_annular,\n",
+    "q_bins_annular_snr, I_bins_annular_snr = ctf.radially_average_ctf(\n",
+    "    ctf_annular*inverse_error,\n",
     "    (sampling,sampling)\n",
     ")"
    ]
@@ -363,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "45f7df1f-47b6-4754-abe3-6196941ec5a9",
    "metadata": {},
    "outputs": [],
@@ -377,28 +380,27 @@
     "im_detector = ax_detector.imshow(ctf.combined_images_rgb(virtual_masks_annular))\n",
     "ctf.add_scalebar(ax_detector,length=n//4,sampling=reciprocal_sampling,units=r'$q_{\\mathrm{probe}}$')\n",
     "\n",
-    "# analytic CTF\n",
-    "ax_ctf_analytic = axs[1]\n",
-    "im_ctf_analytic = ax_ctf_analytic.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_analytic),normalize=True),cmap=cmap)\n",
+    "# analytic SNR\n",
+    "ax_snr_analytic = axs[1]\n",
+    "im_snr_analytic = ax_snr_analytic.imshow(ctf.histogram_scaling(np.fft.fftshift((ctf_analytic*inverse_error)),normalize=True),cmap=cmap)\n",
     "\n",
-    "# annular CTF\n",
-    "ax_ctf_annular = axs[2]\n",
-    "im_ctf = ax_ctf_annular.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_annular),normalize=True),cmap=cmap)\n",
+    "# annular SNR\n",
+    "ax_snr_annular = axs[2]\n",
+    "im_snr = ax_snr_annular.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_annular*inverse_error),normalize=True),cmap=cmap)\n",
     "\n",
-    "# analytic CTF radially-averaged\n",
-    "ax_ctf_rad = axs[3]\n",
-    "plot_ctf_analytic = ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k',label='analytical')[0]\n",
-    "plot_ctf = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=icom_line_color,label='annular')[0]\n",
-    "ax_ctf_rad.legend()\n",
+    "# analytic SNR radially-averaged\n",
+    "ax_snr_rad = axs[3]\n",
+    "plot_snr_analytic = ax_snr_rad.plot(q_bins_analytic_snr,I_bins_analytic_snr,color='k')[0]\n",
+    "plot_snr = ax_snr_rad.plot(q_bins_annular_snr, I_bins_annular_snr, color=icom_line_color)[0]\n",
     "\n",
     "# remove ticks, add titles to 2D-plots\n",
     "for ax, title in zip(\n",
     "    axs.T.flatten(),\n",
     "    [\n",
     "        \"detector geometry\",\n",
-    "        \"analytical CTF\",\n",
-    "        \"annular CTF\",\n",
-    "        \"radially averaged CTFs\",\n",
+    "        \"analytical SNR\",\n",
+    "        \"annular SNR\",\n",
+    "        \"radially averaged SNRs\"\n",
     "    ]\n",
     "):\n",
     "    ax.set_xticks([])\n",
@@ -408,13 +410,13 @@
     "for ax in axs[:3]:\n",
     "    ctf.add_scalebar(ax,length=n//4,sampling=reciprocal_sampling,units=r'$q_{\\mathrm{probe}}$')\n",
     "\n",
-    "# remove y-ticks, add x-label, add vlines to radial avg. plot\n",
-    "ax_ctf_rad.set_ylim([0,1])\n",
-    "ax_ctf_rad.set_xlim([0,q_max])\n",
-    "ax_ctf_rad.vlines([q_probe/2,q_probe*1.05],0,2,colors='k',linestyles='--',linewidth=1,)\n",
-    "ax_ctf_rad.set_xticks([0,q_probe,q_max])\n",
-    "ax_ctf_rad.set_xticklabels([0,1,2])\n",
-    "ax_ctf_rad.set_xlabel(r\"spatial frequency, $q/q_{\\mathrm{probe}}$\")\n",
+    "# remove y-ticks, add x-label, add vlines to bottom row\n",
+    "ax_snr_rad.set_ylim([0,1])\n",
+    "ax_snr_rad.set_xlim([0,q_max])\n",
+    "ax_snr_rad.vlines([q_probe/2,q_probe*1.05],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "ax_snr_rad.set_xticks([0,q_probe,q_max])\n",
+    "ax_snr_rad.set_xticklabels([0,1,2])\n",
+    "ax_snr_rad.set_xlabel(r\"spatial frequency, $q/q_{\\mathrm{probe}}$\")\n",
     "\n",
     "# fix ipympl canvas from resizing\n",
     "fig.canvas.resizable = False\n",
@@ -423,7 +425,7 @@
     "fig.canvas.toolbar_visible = True\n",
     "fig.canvas.toolbar_position = 'bottom'\n",
     "fig.canvas.layout.width = '640px'\n",
-    "fig.canvas.layout.height = '245px'\n",
+    "fig.canvas.layout.height = '235px'\n",
     "fig.tight_layout()\n",
     "# fig"
    ]
@@ -437,8 +439,8 @@
     "\n",
     "We need to update 6 parts of the plot each time we update:\n",
     "- The virtual masks (`im_detector`)\n",
-    "- The annular CTF (`im_ctf`)\n",
-    "- The radially-averaged annular CTF (`plot_ctf`)\n",
+    "- The annular SNR (`im_snr`)\n",
+    "- The radially-averaged annular SNR (`plot_snr`)\n",
     "- The vlines on the radially-averaged plots\n",
     "  - This one doesn't have a single artist we can update. Instead we remove all LineCollections and replot"
    ]
@@ -534,10 +536,10 @@
     ")\n",
     "\n",
     "def defocus_wrapper(*args):\n",
-    "    im_ctf.set_alpha(0.25)\n",
-    "    im_ctf_analytic.set_alpha(0.25)\n",
-    "    plot_ctf.set_alpha(0.25)\n",
-    "    plot_ctf_analytic.set_alpha(0.25)\n",
+    "    im_snr.set_alpha(0.25)\n",
+    "    im_snr_analytic.set_alpha(0.25)\n",
+    "    plot_snr.set_alpha(0.25)\n",
+    "    plot_snr_analytic.set_alpha(0.25)\n",
     "    simulate_button.button_style = 'warning'\n",
     "defocus_slider.observe(defocus_wrapper,names='value')\n",
     "\n",
@@ -551,10 +553,10 @@
     "    simulate(\n",
     "        defocus_slider.value,\n",
     "    )\n",
-    "    im_ctf.set_alpha(1)\n",
-    "    im_ctf_analytic.set_alpha(1)\n",
-    "    plot_ctf.set_alpha(1)\n",
-    "    plot_ctf_analytic.set_alpha(1)\n",
+    "    im_snr.set_alpha(1)\n",
+    "    im_snr_analytic.set_alpha(1)\n",
+    "    plot_snr.set_alpha(1)\n",
+    "    plot_snr_analytic.set_alpha(1)\n",
     "    simulate_button.button_style = ''\n",
     "    disable_all(False)\n",
     "simulate_button.on_click(simulate_wrapper)"
@@ -592,19 +594,18 @@
     "\n",
     "    icom_annular = integrate_com(com_x,com_y,kx_op,ky_op)\n",
     "    ctf_annular = ctf.compute_ctf(icom_annular) \n",
-    "\n",
-    "    q_bins_annular, I_bins_annular = ctf.radially_average_ctf(\n",
-    "        ctf_annular,\n",
+    "    q_bins_annular_snr, I_bins_annular_snr = ctf.radially_average_ctf(\n",
+    "        ctf_annular*inverse_error,\n",
     "        (sampling,sampling)\n",
     "    )\n",
-    "\n",
+    "    \n",
     "    # update data\n",
     "    # 2D arrays\n",
     "    im_detector.set_data(ctf.combined_images_rgb(virtual_masks_annular))\n",
-    "    im_ctf.set_data(ctf.histogram_scaling(np.fft.fftshift(ctf_annular),normalize=True))\n",
+    "    im_snr.set_data(ctf.histogram_scaling(np.fft.fftshift(ctf_annular*inverse_error),normalize=True))\n",
     "\n",
-    "    # set radial average\n",
-    "    plot_ctf.set_ydata(I_bins_annular)\n",
+    "    # 1D line\n",
+    "    plot_snr.set_ydata(I_bins_annular_snr)\n",
     "\n",
     "    # collections (vlines)\n",
     "    axs[3].collections[0].remove()\n",
@@ -665,14 +666,14 @@
     "        )\n",
     "    )\n",
     "    \n",
-    "    # Radially-averaged CTF\n",
-    "    q_bins_analytic, I_bins_analytic = ctf.radially_average_ctf(ctf_analytic,(sampling,sampling))\n",
+    "    # Radially-averaged CTF and SNR\n",
+    "    q_bins_analytic_snr, I_bins_analytic_snr = ctf.radially_average_ctf(ctf_analytic*inverse_error,(sampling,sampling))\n",
     "\n",
     "    # analytic\n",
-    "    im_ctf_analytic.set_data(ctf.histogram_scaling(np.fft.fftshift(ctf_analytic),normalize=True))\n",
+    "    im_snr_analytic.set_data(ctf.histogram_scaling(np.fft.fftshift(ctf_analytic*inverse_error),normalize=True))\n",
     "\n",
-    "    # set radial average\n",
-    "    plot_ctf_analytic.set_ydata(I_bins_analytic)\n",
+    "    # 1D lines\n",
+    "    plot_snr_analytic.set_ydata(I_bins_analytic_snr)\n",
     "\n",
     "    fig.canvas.draw_idle()\n",
     "    return None"
@@ -687,7 +688,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32653e6713354fabbf31e8f166b5c43a",
+       "model_id": "c66ee0d899bb4af186455d37636067fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -700,7 +701,7 @@
     }
    ],
    "source": [
-    "#| label: app:annular_segmented_detectors\n",
+    "#| label: app:snr_segmented_icom\n",
     "# Annular Segmented Detectors\n",
     "\n",
     "display(\n",
@@ -722,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8559d837-6721-406c-b074-e26d16f2f69e",
+   "id": "7e842e8f-526c-4679-8e69-78dec1e13469",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -730,7 +731,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6327c7bd-73f1-46e1-9f62-72e0f1d7ef8c",
+   "id": "b45236a6-f148-4c54-b548-4d76a5099f38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15e2a3c4-d2a8-455e-ac2a-fb2ee384126d",
    "metadata": {},
    "outputs": [],
    "source": []
