--- a/notebooks/01_icom_contrast_transfer.ipynb
+++ b/notebooks/01_icom_contrast_transfer.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "2653fe5c-f3c0-4e22-9408-a99c485b25f5",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -131,14 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "id": "7c8d3654-df49-437d-8d20-3b9804713a0f",
    "metadata": {},
    "outputs": [],
    "source": [
     "sto_potential = np.load(\"data/STO_projected-potential_192x192_4qprobe.npy\")\n",
+    "sto_potential -= sto_potential.mean()\n",
     "mof_potential = np.load(\"data/MOF_projected-potential_192x192_4qprobe.npy\")\n",
-    "apo_potential = np.load(\"data/apoF_projected-potential_192x192_4qprobe.npy\")"
+    "mof_potential -= mof_potential.mean()\n",
+    "apo_potential = np.load(\"data/apoF_projected-potential_192x192_4qprobe.npy\")\n",
+    "apo_potential -= apo_potential.mean()"
    ]
   },
   {
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "71d0b5b8-198d-4602-9d49-9b01fa5829b9",
    "metadata": {},
    "outputs": [],
@@ -170,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "4146d61d-f9c9-463d-bd4e-8a4cf878070f",
    "metadata": {},
    "outputs": [],
@@ -219,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "12634cda",
    "metadata": {},
    "outputs": [],
@@ -297,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "db58b779",
    "metadata": {},
    "outputs": [],
@@ -331,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "21f2b02c-6a5b-49fb-9682-981192798244",
    "metadata": {},
    "outputs": [],
@@ -384,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "id": "45f7df1f-47b6-4754-abe3-6196941ec5a9",
    "metadata": {},
    "outputs": [],
@@ -507,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "id": "68fa9425",
    "metadata": {},
    "outputs": [],
@@ -645,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "id": "d0d505b4",
    "metadata": {},
    "outputs": [],
@@ -747,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 44,
    "id": "0a362424-6bcc-407f-989e-8482d066b853",
    "metadata": {},
    "outputs": [],
@@ -769,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "id": "3639cc18-73ed-4008-af56-33a847821dad",
    "metadata": {},
    "outputs": [],
@@ -805,14 +808,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "id": "b4e23fec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e93933c22cc4cdd8468624673040bd0",
+       "model_id": "171ee6db4fc6456c809933d6967aba1f",
        "version_major": 2,
        "version_minor": 0
       },
