--- a/notebooks/03_ssb_contrast_transfer.ipynb
+++ b/notebooks/03_ssb_contrast_transfer.ipynb
@@ -62,6 +62,7 @@
     "phi0 = 1.0\n",
     "\n",
     "cmap = cmr.eclipse\n",
+    "sample_cmap = 'gray'\n",
     "icom_line_color = 'cornflowerblue'\n",
     "iter_ptycho_line_color = 'mediumvioletred'\n",
     "ssb_line_color = 'olivedrab'"
@@ -127,6 +128,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "58d6096e-d813-4819-b573-0c25026e368d",
+   "metadata": {},
+   "source": [
+    "#### Import sample potentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "82c1144c-7010-4b9d-a67a-72973e36da00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sto_potential = np.load(\"data/STO_projected-potential_192x192_4qprobe.npy\")\n",
+    "sto_potential -= sto_potential.mean()\n",
+    "mof_potential = np.load(\"data/MOF_projected-potential_192x192_4qprobe.npy\")\n",
+    "mof_potential -= mof_potential.mean()\n",
+    "apo_potential = np.load(\"data/apoF_projected-potential_192x192_4qprobe.npy\")\n",
+    "apo_potential -= apo_potential.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "476883e0-f740-4a51-932f-39cf19d23f2b",
    "metadata": {},
    "source": [
@@ -135,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "91d6e5e2-d451-4242-8a5b-3fdca5814ed0",
    "metadata": {},
    "outputs": [],
@@ -171,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7de666e8-0c61-41bb-a8ac-7056504b9a88",
    "metadata": {},
    "outputs": [],
@@ -222,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "dda6054c-2d9c-449c-b0d6-74ffdedada8a",
    "metadata": {},
    "outputs": [],
@@ -290,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5582e59d-87c4-48ba-8b67-c5a8c47a98aa",
    "metadata": {},
    "outputs": [],
@@ -304,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c720648a-4b46-41cf-bca4-0a8568e4a587",
    "metadata": {},
    "outputs": [],
@@ -446,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "76b18463-b935-45ff-8335-50e4a15d29b7",
    "metadata": {},
    "outputs": [],
@@ -466,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "1ef2e8b6-4825-43a0-bf34-09546ca17033",
    "metadata": {},
    "outputs": [],
@@ -488,25 +512,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "82f3fcc2-ae1f-4a96-9beb-f27c7f47c8b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "with plt.ioff():\n",
     "    dpi=72\n",
-    "    fig, axs = plt.subplots(1,4,figsize=(640/dpi,200/dpi),dpi=dpi)\n",
+    "    fig, axs = plt.subplots(2,4,figsize=(640/dpi,360/dpi),dpi=dpi)\n",
     "\n",
-    "ax_trotter_pixelated = axs[0]\n",
+    "empty = np.zeros((n,n))\n",
+    "empty[0,0] = 1\n",
+    "\n",
+    "ax_trotter_pixelated = axs[0,0]\n",
     "im_trotter_pixelated = ax_trotter_pixelated.imshow(virtual_masks_annular[0])\n",
     "\n",
-    "ax_trotter_annular = axs[1]\n",
+    "ax_trotter_annular = axs[0,1]\n",
     "im_trotter_annular = ax_trotter_annular.imshow(virtual_masks_annular[0])\n",
     "\n",
-    "ax_ctf = axs[2]\n",
-    "im_ctf = ax_ctf.imshow(virtual_masks_annular[0],cmap=cmap)\n",
+    "ax_ctf = axs[0,2]\n",
+    "im_ctf = ax_ctf.imshow(empty,cmap=cmap)\n",
     "\n",
-    "ax_ctf_rad = axs[3]\n",
+    "ax_ctf_rad = axs[0,3]\n",
     "plot_ctf_pixelated = ax_ctf_rad.plot(q_bins_pixelated,I_bins_pixelated,color='k',label='pixelated')[0]\n",
     "plot_ctf = ax_ctf_rad.plot(np.linspace(0,q_max,n//2 + 1),np.zeros(n//2 + 1),color=ssb_line_color,label='annular')[0]\n",
     "\n",
@@ -517,14 +544,57 @@
     "ax_ctf_rad.set_xticklabels([0,1,2])\n",
     "ax_ctf_rad.set_yticks([])\n",
     "ax_ctf_rad.set_xlabel(r\"spatial frequency, $q/q_{\\mathrm{probe}}$\")\n",
-    "ax_ctf_rad.set_title(\"radially-averaged CTFs\")\n",
+    "# ax_ctf_rad.set_title(\"radially-averaged CTFs\")\n",
     "ax_ctf_rad.legend()\n",
     "\n",
-    "for ax, title in zip(axs[:3],[\"pixelated trotter\",\"annular trotter\",\"annular CTF\"]):\n",
+    "for ax, title in zip(\n",
+    "    axs.flatten(),\n",
+    "    [\n",
+    "        \"pixelated trotter\",\n",
+    "        \"annular trotter\",\n",
+    "        \"annular CTF\",\n",
+    "        \"radially-averaged CTFs\",\n",
+    "        \"white noise object\",\n",
+    "        \"STO sample\",\n",
+    "        \"MOF sample\",\n",
+    "        \"Apoferritin sample\",\n",
+    "    ]\n",
+    "):\n",
     "    ax.set_xticks([])\n",
     "    ax.set_yticks([])\n",
     "    ax.set_title(title)\n",
+    "    \n",
+    "for ax in axs[0,:3]:\n",
     "    ctf.add_scalebar(ax,length=n//4,sampling=reciprocal_sampling,units=r'$q_{\\mathrm{probe}}$')\n",
+    "\n",
+    "\n",
+    "ax_white_noise_obj = axs[1,0]\n",
+    "im_white_noise_obj = ax_white_noise_obj.imshow(\n",
+    "    np.zeros((n,n)),vmin=0,vmax=1,\n",
+    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(potential) * ctf_annular).real,normalize=True),\n",
+    "    cmap=sample_cmap\n",
+    ")\n",
+    "\n",
+    "ax_sto_obj = axs[1,1]\n",
+    "im_sto_obj = ax_sto_obj.imshow(\n",
+    "    np.zeros((n,n)),vmin=0,vmax=1,\n",
+    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(sto_potential) * zero_pad_ctf_to_4qprobe).real,normalize=True),\n",
+    "    cmap=sample_cmap\n",
+    ")\n",
+    "\n",
+    "ax_mof_obj = axs[1,2]\n",
+    "im_mof_obj = ax_mof_obj.imshow(\n",
+    "    np.zeros((n,n)),vmin=0,vmax=1,\n",
+    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(mof_potential) * zero_pad_ctf_to_4qprobe).real,normalize=True),\n",
+    "    cmap=sample_cmap\n",
+    ")\n",
+    "\n",
+    "ax_apo_obj = axs[1,3]\n",
+    "im_apo_obj = ax_apo_obj.imshow(\n",
+    "    np.zeros((n,n)),vmin=0,vmax=1,\n",
+    "    # ctf.histogram_scaling(np.fft.ifft2(np.fft.fft2(apo_potential) * zero_pad_ctf_to_4qprobe).real,normalize=True),\n",
+    "    cmap=sample_cmap\n",
+    ")\n",
     "\n",
     "fig.tight_layout()\n",
     "fig.canvas.resizable = False\n",
@@ -533,13 +603,14 @@
     "fig.canvas.toolbar_visible = True\n",
     "fig.canvas.toolbar_position = 'bottom'\n",
     "fig.canvas.layout.width = '640px'\n",
-    "fig.canvas.layout.height = '230px'\n",
-    "fig.tight_layout()"
+    "fig.canvas.layout.height = '400px'\n",
+    "fig.tight_layout()\n",
+    "# fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f76ba5fb-d77d-462e-810b-f13424740697",
    "metadata": {},
    "outputs": [],
@@ -653,6 +724,10 @@
     "    im_trotter_annular.set_alpha(0.25)\n",
     "    im_trotter_pixelated.set_alpha(0.25)\n",
     "    im_ctf.set_alpha(0.25)\n",
+    "    im_white_noise_obj.set_alpha(0.25)\n",
+    "    im_sto_obj.set_alpha(0.25)\n",
+    "    im_mof_obj.set_alpha(0.25)\n",
+    "    im_apo_obj.set_alpha(0.25)\n",
     "    plot_ctf.set_alpha(0.25)\n",
     "    plot_ctf_pixelated.set_alpha(0.25)\n",
     "    simulate_button.button_style = 'warning'\n",
@@ -671,6 +746,7 @@
     "    reconstruct_button.button_style = 'warning'\n",
     "    reconstruction_pbar.reset()\n",
     "    simulate_button.button_style = ''\n",
+    "    disable_all(False)\n",
     "simulate_button.on_click(simulate_wrapper)\n",
     "\n",
     "def reconstruct_wrapper(*args):\n",
@@ -687,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "163a770e-5abb-4ab1-a8b2-c93a70d5d43c",
    "metadata": {},
    "outputs": [],
@@ -751,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "17bf2470-4a2e-4bef-ad08-5d49f783e07e",
    "metadata": {},
    "outputs": [],
@@ -783,8 +859,48 @@
     "            np.fft.fftshift(numeric_ctf),\n",
     "            normalize=True\n",
     "        )\n",
-    "    )        \n",
-    "\n",
+    "    )    \n",
+    "    \n",
+    "    # real space samples\n",
+    "    im_white_noise_obj.set_data(\n",
+    "        ctf.histogram_scaling(\n",
+    "            np.fft.ifft2(\n",
+    "                np.fft.fft2(potential) * numeric_ctf\n",
+    "            ).real\n",
+    "            ,normalize=True\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    zero_pad_ctf_to_4qprobe = np.fft.ifftshift(np.pad(np.fft.fftshift(numeric_ctf),n//2))\n",
+    "    resample_2qprobe_ctf_to_192  = np.fft.fft2(\n",
+    "        np.fft.ifftshift(\n",
+    "            np.pad(\n",
+    "                np.fft.fftshift(\n",
+    "                    np.fft.ifft2(numeric_ctf).real),\n",
+    "                n//2)\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    im_sto_obj.set_data(\n",
+    "        ctf.histogram_scaling(\n",
+    "            np.fft.ifft2(\n",
+    "                np.fft.fft2(sto_potential) * zero_pad_ctf_to_4qprobe).real,\n",
+    "            normalize=True)\n",
+    "    )\n",
+    "    im_mof_obj.set_data(\n",
+    "        ctf.histogram_scaling(\n",
+    "            np.fft.ifft2(\n",
+    "                np.fft.fft2(mof_potential) * zero_pad_ctf_to_4qprobe).real,\n",
+    "            normalize=True)\n",
+    "    )\n",
+    "    im_apo_obj.set_data(\n",
+    "        ctf.histogram_scaling(\n",
+    "            np.fft.ifft2(\n",
+    "                np.fft.fft2(apo_potential) * zero_pad_ctf_to_4qprobe).real,\n",
+    "            normalize=True)\n",
+    "    )\n",
+    "    \n",
+    "    \n",
     "    q_bins, I_bins = ctf.radially_average_ctf(numeric_ctf,(sampling,sampling))\n",
     "    plot_ctf.set_ydata(I_bins)\n",
     "\n",
@@ -799,6 +915,10 @@
     "    ax_ctf_rad.vlines([inner_collection_angle_slider.value,outer_collection_angle_slider.value],0,2,colors='k',linestyles='--',linewidth=1,)\n",
     "\n",
     "    im_ctf.set_alpha(1)\n",
+    "    im_white_noise_obj.set_alpha(1)\n",
+    "    im_sto_obj.set_alpha(1)\n",
+    "    im_mof_obj.set_alpha(1)\n",
+    "    im_apo_obj.set_alpha(1)\n",
     "    plot_ctf.set_alpha(1)\n",
     "    plot_ctf_pixelated.set_alpha(1)\n",
     "    reconstruct_button.button_style = ''\n",
@@ -809,14 +929,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "4f1b0d36-99e8-4384-9f56-405e96bf896f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac15674f5078411583b340c2edb7c257",
+       "model_id": "4c6063319b894a718516047dd443d0eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -824,7 +944,7 @@
        "Output()"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,6 +999,10 @@
     "    im_trotter_annular.set_alpha(1)\n",
     "    im_trotter_pixelated.set_alpha(1)\n",
     "    im_ctf.set_alpha(0.25)\n",
+    "    im_white_noise_obj.set_alpha(0.25)\n",
+    "    im_sto_obj.set_alpha(0.25)\n",
+    "    im_mof_obj.set_alpha(0.25)\n",
+    "    im_apo_obj.set_alpha(0.25)\n",
     "    plot_ctf.set_alpha(0.25)\n",
     "    reconstruct_button.button_style = 'warning'\n",
     "    reconstruction_pbar.reset()\n",
@@ -895,12 +1019,16 @@
     "        'number_of_segments':number_of_segments_slider,\n",
     "        'rotation_offset':rotation_offset_slider,\n",
     "    }\n",
-    ")"
+    ")\n",
+    "# inner_collection_angle_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "# outer_collection_angle_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "# number_of_segments_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "# rotation_offset_slider.observe(update_virtual_and_pixelated_trotters,names='value')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "cdf70485-bf65-4c95-99f8-6c1972ea4800",
    "metadata": {},
    "outputs": [],
@@ -934,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "667cd180-c2ad-4e47-8529-e5fcad8e512c",
    "metadata": {},
    "outputs": [],
@@ -956,6 +1084,10 @@
     "    plot_ctf_pixelated.set_ydata(I_bins_pixelated)\n",
     "    plot_ctf_pixelated.set_alpha(1)\n",
     "    im_ctf.set_alpha(0.25)\n",
+    "    im_white_noise_obj.set_alpha(0.25)\n",
+    "    im_sto_obj.set_alpha(0.25)\n",
+    "    im_mof_obj.set_alpha(0.25)\n",
+    "    im_apo_obj.set_alpha(0.25)\n",
     "    plot_ctf.set_alpha(0.25)\n",
     "    fig.canvas.draw()\n",
     "    reconstruct_button.button_style = 'warning'\n",
@@ -975,7 +1107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02daec9375ec495a8d663ff39c87d09c",
+       "model_id": "b7262c888aa34ade8e42b22cdc48bb45",
        "version_major": 2,
        "version_minor": 0
       },
